burger-menu effect

--- a/index.html
+++ b/index.html
@@ -15,12 +15,22 @@
     <header>
       <nav id="nav" class="nav-container">
         <img src="/icons/logo_small.svg" alt="logo of Health Hub" />
+        <!-- burger menu -->
+        <input type="checkbox" id="burger-check" />
+        <div id="burger-container">
+          <div id="burger-menu">
+            <div class="bar top"></div>
+            <div class="bar center"></div>
+            <div class="bar bottom"></div>
+          </div>
+        </div>
+
         <div class="nav-links">
           <ul>
             <li><a href="/about.html">Articles</a></li>
-          <li><a href="/about.html">About</a></li>
-          <li><a href="/contact.html">Contact</a></li>
-        </ul>
+            <li><a href="/about.html">About</a></li>
+            <li><a href="/contact.html">Contact</a></li>
+          </ul>
         </div>
       </nav>
     </header>
