nav styled to media queries

--- a/index.html
+++ b/index.html
@@ -17,17 +17,16 @@
         <img src="/icons/logo_small.svg" alt="logo of Health Hub" />
         <!-- burger menu -->
         <input type="checkbox" id="burger-check" />
-        <div id="burger-container">
+        <label for="burger-check" id="burger-container">
           <div id="burger-menu">
             <div class="bar top"></div>
             <div class="bar center"></div>
             <div class="bar bottom"></div>
-          </div>
         </div>
-
+</label>
         <div class="nav-links">
           <ul>
-            <li><a href="/about.html">Articles</a></li>
+            <li><a href="/blogsite.html">Blog</a></li>
             <li><a href="/about.html">About</a></li>
             <li><a href="/contact.html">Contact</a></li>
           </ul>
