--- a/index.html
+++ b/index.html
@@ -12,32 +12,37 @@
     </style>
   </head>
   <body>
-    <header> 
-        <img src="/icons/logo_small.svg" alt="logo of Health Hub" />
+    <header>
+      <img src="/icons/logo_small.svg" alt="logo of Health Hub" />
       <nav id="nav" class="nav-container">
-       
         <!-- burger menu -->
         <div class="nav-links">
-        <input type="checkbox" id="burger-check" />
-        <label for="burger-check" id="burger-container">
-          <div id="burger-menu" class="burger-menu">
-            <div class="bar top"></div>
-            <div class="bar center"></div>
-            <div class="bar bottom"></div>
-        </div>
-</label>
-        <div class="links">
-          <ul>
-            <li><a href="/blogsite.html">Blog</a></li>
-            <li><a href="/about.html">About</a></li>
-            <li><a href="/contact.html">Contact</a></li>
-          </ul>
-        </div>
+          <input type="checkbox" id="burger-check" />
+          <label for="burger-check" id="burger-container">
+            <div id="burger-menu" class="burger-menu">
+              <div class="bar top"></div>
+              <div class="bar center"></div>
+              <div class="bar bottom"></div>
+            </div>
+          </label>
+          <div class="links">
+            <ul>
+              <li><a href="/blogsite.html">Blog</a></li>
+              <li><a href="/about.html">About</a></li>
+              <li><a href="/contact.html">Contact</a></li>
+            </ul>
+          </div>
         </div>
       </nav>
     </header>
-    <main class="content-container">
+    <main>
       <!-- page content -->
+      <div class="hero">
+        <img
+          src="/images/hero.png"
+          alt="asthetic image of a person swimming in the big ocean"
+        />
+      </div>
     </main>
     <footer></footer>
   </body>
