big-logo positioned on hero

--- a/index.html
+++ b/index.html
@@ -36,13 +36,19 @@
       </nav>
     </header>
     <main>
-      <!-- page content -->
       <div class="hero">
+        <div class="hero-logo"></div>
         <img
           src="/images/hero.png"
           alt="asthetic image of a person swimming in the big ocean"
         />
       </div>
+      <!-- page content -->
+      <section class="latest-posts">
+        <div class="section-header">
+          <h2>Latest posts</h2>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
