topic section created to mobile

--- a/index.html
+++ b/index.html
@@ -43,10 +43,22 @@
           alt="asthetic image of a person swimming in the big ocean"
         />
       </div>
-      <!-- page content -->
-      <section class="latest-posts">
+      <!-- latest posts content -->
+      <section class="latest-container">
         <div class="section-header">
           <h2>Latest posts</h2>
+          <h3>insert js here</h3>
+        </div>
+      </section>
+
+      <!-- topic of the month content -->
+      <section class="topic-container">
+        <div class="topic-logo">
+          <img
+            src="icons/topic-logo.svg"
+            alt="logo of the topic of the month section"
+          />
+          <div class="topic-content"></div>
         </div>
       </section>
     </main>
