adjustments to hero img

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <main>
       <div class="hero">
         <div class="hero-logo"></div>
-        <img
+        <img class="hero-img"
           src="/images/hero.png"
           alt="asthetic image of a person swimming in the big ocean"
         />
@@ -58,7 +58,19 @@
             src="icons/topic-logo.svg"
             alt="logo of the topic of the month section"
           />
-          <div class="topic-content"></div>
+        </div>
+        <div class="topic-content"></div>
+      </section>
+
+      <!-- section content flex containers -->
+      <section class="section-flex-container">
+        <div class="health-container">
+          <h2>mental // physical health</h2>
+          <div class="health-flex"></div>
+        </div>
+        <div class="lifestyle-container">
+          <h2>lifestyle // habits</h2>
+          <div class="lifestyle-flex"></div>
         </div>
       </section>
     </main>
