footer to media queries

--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
     <main>
       <div class="hero">
         <div class="hero-logo"></div>
-        <img class="hero-img"
+        <img
+          class="hero-img"
           src="/images/hero.png"
           alt="asthetic image of a person swimming in the big ocean"
         />
@@ -74,6 +75,32 @@
         </div>
       </section>
     </main>
-    <footer></footer>
+    <footer class="blog-footer">
+      <div class="footer-row-1">
+        <div class="footer-logo">
+          <img src="../icons/logo_small.svg" alt="Health Hub Logo" />
+        </div>
+      </div>
+
+      <div class="footer-row-2">
+        <div class="footer-info">
+            <h3>Contact us </h3>
+          <p>123 Main Street, Thistown USA</p>
+          <p>Email: HealthHub@desk.com</p>
+          <p>Phone: 555-123-4567</p>
+        </div>
+      </div>
+
+      <div class="footer-row-3">
+        <div class="footer-links">
+            <h3>Explore</h3>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contact</a></li>
+        </div>
+        <h5>HealthHub &copy; 2023. All rights reserved.</h5>
+      </div>
+    </footer>
   </body>
 </html>
