logo header adjustments

--- a/blogsite.html
+++ b/blogsite.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <header>
-      <img src="/icons/logo_small.svg" alt="logo of Health Hub" />
+      <a href="/index.html"><img src="/icons/logo_small.svg" alt="logo of Health Hub" /></a>
       <nav id="nav" class="nav-container">
         <!-- burger menu -->
         <div class="nav-links">
@@ -39,7 +39,16 @@
       <div class="blog-header">
         <h1>insert content here</h1>
       </div>
-      <div class="blog-posts-container"></div>
+      <!-- fetched from api -->
+      <div class="blog-posts-container">
+        <!-- image clickable -->
+     <!--    <div class="full-img-container">
+            <div class="full-img-popup">
+                <span class="close-btn">&times;</span>
+                <img class="full-img" src="" alt="">
+            </div> -->
+        </div>
+      </div>
     </main>
     <footer class="blog-footer">
       <div class="footer-row-1">
