from local api call to fetching from domain name

--- a/blogsite.html
+++ b/blogsite.html
@@ -41,8 +41,8 @@
       </div>
       <!-- fetched from api -->
       <div class="blog-posts-container">
-
         </div>
+        <button id="view-more-btn">View more posts</button>
       </div>
 
 
