trying to display 10 blogposts

--- a/specific-blog.html
+++ b/specific-blog.html
@@ -40,7 +40,11 @@
       </div>
       <!-- fetched from api -->
       <div class="specific-blog-container">
-
+<div class="modal">
+  <div class="modal-content">
+  <img src="" alt=""></div>
+  <span class="close">&times;</span>
+</div>
         </div>
       </div>
 
