--- a/index.html
+++ b/index.html
@@ -10,6 +10,22 @@
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Khand:wght@600&display=swap");
     </style>
+    <!-- Hotjar Tracking Code for Health-Hub -->
+    <script>
+      (function (h, o, t, j, a, r) {
+        h.hj =
+          h.hj ||
+          function () {
+            (h.hj.q = h.hj.q || []).push(arguments);
+          };
+        h._hjSettings = { hjid: 3486519, hjsv: 6 };
+        a = o.getElementsByTagName("head")[0];
+        r = o.createElement("script");
+        r.async = 1;
+        r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
+        a.appendChild(r);
+      })(window, document, "https://static.hotjar.com/c/hotjar-", ".js?sv=");
+    </script>
   </head>
   <body>
     <header>
@@ -84,7 +100,7 @@
 
       <div class="footer-row-2">
         <div class="footer-info">
-            <h3>Contact us </h3>
+          <h3>Contact us</h3>
           <p>123 Main Street, Thistown USA</p>
           <p>Email: HealthHub@desk.com</p>
           <p>Phone: 555-123-4567</p>
@@ -93,7 +109,7 @@
 
       <div class="footer-row-3">
         <div class="footer-links">
-            <h3>Explore</h3>
+          <h3>Explore</h3>
           <li><a href="#">Home</a></li>
           <li><a href="#">Blog</a></li>
           <li><a href="#">About</a></li>
