--- a/index.html
+++ b/index.html
@@ -60,11 +60,19 @@
           alt="asthetic image of a person swimming in the big ocean"
         />
       </div>
-      <!-- latest posts content -->
+      <!-- latest posts content container-->
       <section class="latest-container">
         <div class="section-header">
           <h2>Latest posts</h2>
-          <h3>insert js here</h3>
+        </div>
+        <div class="slider-container">
+          <div class="slides">
+            <!-- add latest posts here -->
+          </div>
+          <div class="slider-btns">
+            <button id="prevBtn">Prev</button>
+            <button id="nextBtn">Next</button>
+          </div>
         </div>
       </section>
 
