--- a/blogsite.html
+++ b/blogsite.html
@@ -52,6 +52,7 @@
       </div>
       <!-- fetched from api -->
       <div class="blog-posts-container">
+        <div class="loader"></div> 
         </div>
         <button id="view-more-btn">View more posts</button>
       </div>
