--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
         <div class="slider-container">
           <div class="slides">
             <!-- add latest posts here -->
+            <div class="loader"></div> 
           </div>
           <div class="slider-btns">
             <button id="prevBtn">Prev</button>
