--- a/specific-blog.html
+++ b/specific-blog.html
@@ -40,6 +40,7 @@
       </div>
       <!-- fetched from api -->
       <div class="specific-blog-container">
+        <div class="loader"></div> 
 <div class="modal">
   <div class="modal-content">
   <img src="" alt=""></div>
