styled view-more-btn

--- a/blogsite.html
+++ b/blogsite.html
@@ -54,7 +54,7 @@
       <div class="blog-posts-container">
         <div class="loader"></div> 
         </div>
-        <button id="view-more-btn">View more posts</button>
+        <button class="view-more-btn">View more posts</button>
       </div>
 
 
