--- a/blogsite.html
+++ b/blogsite.html
@@ -6,7 +6,7 @@
     <meta name="description" content="The blog page of Health Hub" />
     <link href="/css/styles.css" rel="stylesheet" />
     <script src="/js/blogposts.js" defer type="module"></script>
-    <title>Health Hub | Blog site</title>
+    <title>Health Hub | Blogposts page</title>
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Khand:wght@600&display=swap");
     </style>
