--- a/blogsite.html
+++ b/blogsite.html
@@ -24,27 +24,28 @@
   </head>
   <body>
     <header>
-      <a href="/index.html"><img src="/icons/logo_small.svg" alt="logo of Health Hub" /></a>
+      <a href="/index.html"><img class="logo-small "src="/icons/logo_small.svg" alt="logo of Health Hub" / ></a>
       <nav id="nav" class="nav-container">
-        <!-- burger menu -->
-        <div class="nav-links">
-          <input type="checkbox" id="burger-check" />
-          <label for="burger-check" id="burger-container">
-            <div id="burger-menu" class="burger-menu">
-              <div class="bar top"></div>
-              <div class="bar center"></div>
-              <div class="bar bottom"></div>
+        <nav id="nav" class="nav-container">
+          <!-- burger menu -->
+          <div class="nav-links">
+            <input type="checkbox" id="burger-check" />
+            <label for="burger-check" id="burger-container">
+              <div id="burger-menu" class="burger-menu">
+                <div class="bar top"></div>
+                <div class="bar center"></div>
+                <div class="bar bottom"></div>
+              </div>
+            </label>
+            <div class="links">
+              <ul>
+                <li><a href="/blogsite.html">Blog</a></li>
+                <li><a href="/about.html">About</a></li>
+                <li><a href="/contact.html">Contact</a></li>
+              </ul>
             </div>
-          </label>
-          <div class="links">
-            <ul>
-              <li><a href="/blogsite.html">Blog</a></li>
-              <li><a href="/about.html">About</a></li>
-              <li><a href="/contact.html">Contact</a></li>
-            </ul>
           </div>
-        </div>
-      </nav>
+        </nav>
     </header>
     <main>
       <div class="blog-header">
