adjustments to styling

--- a/blogsite.html
+++ b/blogsite.html
@@ -48,7 +48,7 @@
     </header>
     <main>
       <div class="blog-header">
-        <h1>insert content here</h1>
+        <h1>All blog posts</h1>
       </div>
       <!-- fetched from api -->
       <div class="blog-posts-container">
