--- a/index.html
+++ b/index.html
@@ -85,7 +85,11 @@
             alt="logo of the topic of the month section"
           />
         </div>
-        <div class="topic-content"></div>
+        <div class="topic-content">
+          <div class="topic-info">
+            <p>hello</p>
+          </div>
+        </div>
       </section>
 
       <!-- section content flex containers -->
