active class added

--- a/blogsite.html
+++ b/blogsite.html
@@ -38,7 +38,7 @@
           </label>
           <div class="links">
             <ul>
-              <li><a href="/blogsite.html">Blog</a></li>
+              <li><a href="/blogsite.html" class="active">Blog</a></li>
               <li><a href="/about.html">About</a></li>
               <li><a href="/contact.html">Contact</a></li>
             </ul>
