--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="The blog page of Health Hub" />
+    <meta name="description" content="The contact page of Health Hub" />
     <link href="/css/styles.css" rel="stylesheet" />
     <script src="/js/contact.js" defer type="module"></script>
     <title>Health Hub | Contact page</title>
@@ -40,7 +40,7 @@
             <ul>
               <li><a href="/blogsite.html">Blog</a></li>
               <li><a href="/about.html">About</a></li>
-              <li><a href="/contact.html">Contact</a></li>
+              <li><a href="/contact.html" class="active">Contact</a></li>
             </ul>
           </div>
         </div>
