--- a/index.html
+++ b/index.html
@@ -124,9 +124,9 @@
           <li><a href="#">Home</a></li>
           <li><a href="#">Blog</a></li>
           <li><a href="#">About</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="#">Contact</a></li>        
+          <h5>HealthHub &copy; 2023</h5>
         </div>
-        <h5>HealthHub &copy; 2023. All rights reserved.</h5>
       </div>
     </footer>
   </body>
