added new hotjar code

--- a/specific-blog.html
+++ b/specific-blog.html
@@ -10,6 +10,17 @@
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Khand:wght@600&display=swap");
     </style>
+    <!-- Hotjar Tracking Code for Health Hub Netlify -->
+<script>
+  (function(h,o,t,j,a,r){
+      h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+      h._hjSettings={hjid:3503614,hjsv:6};
+      a=o.getElementsByTagName('head')[0];
+      r=o.createElement('script');r.async=1;
+      r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+      a.appendChild(r);
+  })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+</script>
   </head>
   <body>
     <header>
@@ -41,6 +52,12 @@
       <!-- fetched from api -->
       <div class="specific-blog-container">
         <div class="loader"></div> 
+        <div class="specific-content">
+          <h1></h1>
+          <p></p>
+          <div class="content"></div>
+        </div>
+        <div class="modal-container"></div>
         </div>
       </div>
     </main>
