--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Khand:wght@600&display=swap");
     </style>
-    <!-- Hotjar Tracking Code for Health-Hub -->
+    <!-- Hotjar Tracking Code for Health Hub Netlify -->
     <script>
       (function (h, o, t, j, a, r) {
         h.hj =
@@ -17,7 +17,7 @@
           function () {
             (h.hj.q = h.hj.q || []).push(arguments);
           };
-        h._hjSettings = { hjid: 3486519, hjsv: 6 };
+        h._hjSettings = { hjid: 3503614, hjsv: 6 };
         a = o.getElementsByTagName("head")[0];
         r = o.createElement("script");
         r.async = 1;
