--- a/blogsite.html
+++ b/blogsite.html
@@ -10,11 +10,11 @@
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Khand:wght@600&display=swap");
     </style>
-    <!-- Hotjar Tracking Code for Health-Hub -->
+   <!-- Hotjar Tracking Code for Health Hub Netlify -->
 <script>
   (function(h,o,t,j,a,r){
       h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-      h._hjSettings={hjid:3486519,hjsv:6};
+      h._hjSettings={hjid:3503614,hjsv:6};
       a=o.getElementsByTagName('head')[0];
       r=o.createElement('script');r.async=1;
       r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
