failing attempts with modal

--- a/specific-blog.html
+++ b/specific-blog.html
@@ -53,13 +53,17 @@
       <div class="specific-blog-container">
         <div class="loader"></div> 
         <div class="specific-content">
-          <h1></h1>
-          <p></p>
           <div class="content"></div>
         </div>
-        <div class="modal-container"></div>
+
+        <div class="modal">
+          <div class="modal-content">
+            <span class="close">&times;</span>
+            <img class="modal-image" src="" alt="">
+          </div>
         </div>
-      </div>
+
+        </div>
     </main>
     <footer class="blog-footer">
       <div class="footer-row-1">
