--- a/specific-blog.html
+++ b/specific-blog.html
@@ -58,8 +58,9 @@
 
         <div class="modal">
           <div class="modal-content">
+            <div class="modal-img"></div>
             <span class="close">&times;</span>
-            <img class="modal-image" src="" alt="">
+            <img class="modal-img" src="" alt="">
           </div>
         </div>
 
