Revert "undo this"
This reverts commit 81d9fbda4c61647fa43f6cb5d03f96376c88e735.

--- a/specific-blog.html
+++ b/specific-blog.html
@@ -58,9 +58,8 @@
 
         <div class="modal">
           <div class="modal-content">
-            <div class="modal-img"></div>
             <span class="close">&times;</span>
-            <img class="modal-img" src="" alt="">
+            <img class="modal-image" src="" alt="">
           </div>
         </div>
 
