loader working on "latest" and blogposts

--- a/blogsite.html
+++ b/blogsite.html
@@ -52,6 +52,8 @@
       </div>
       <!-- fetched from api -->
       <div class="blog-posts-container">
+        <div class="loader"></div>
+
         </div>
         <button class="view-more-btn">View more posts</button>
       </div>
