--- a/index.html
+++ b/index.html
@@ -80,7 +80,9 @@
             alt="logo of the topic of the month section"
           />
         </div>  
+        <!-- api call -->
         <div class="topic-content">
+          <div class="loader"></div>
           </div>
         </div>
       </section>
