--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <div class="slider-container">
           <div class="slides">
             <!-- add latest posts here -->
-            <div class="loader"></div>
+            <div class="loader latest-loader"></div>
           </div>
           <div class="slider-btns">
             <button id="prevBtn">Prev</button>
@@ -82,7 +82,7 @@
         </div>  
         <!-- api call -->
         <div class="topic-content">
-          <div class="loader"></div>
+          <div class="loader topic-loader"></div>
 
           </div>
         </div>
