--- a/blogsite.html
+++ b/blogsite.html
@@ -52,7 +52,7 @@
       </div>
       <!-- fetched from api -->
       <div class="blog-posts-container">
-        <div class="loader"></div>
+        <div class="loader blogsite-loader"></div>
 
         </div>
         <button class="view-more-btn">View more posts</button>
