--- a/specific-blog.html
+++ b/specific-blog.html
@@ -51,7 +51,7 @@
       </div>
       <!-- fetched from api -->
       <div class="specific-blog-container">
-        <div class="loader"></div> 
+        <div class="loader specific-loader"></div> 
         <div class="specific-content">
           <div class="content"></div>
         </div>
