loader, api and modal window

--- a/specific-blog.html
+++ b/specific-blog.html
@@ -47,15 +47,21 @@
       </nav>
     </header>
     <main>
-        <a href="../blogsite.html"><div class=" return-link">Back to posts</a>
+        <a href="../blogsite.html">
+          <div class=" return-link">Back to posts</a>
       </div>
+
       <!-- fetched from api -->
       <div class="specific-blog-container">
-        <div class="loader specific-loader"></div> 
         <div class="specific-content">
-          <div class="content"></div>
+          <h1></h1>
+          <p></p>
+          <div class="content">         
+             <div class="loader specific-loader"></div> 
+            </div>
+        </div>  
         </div>
-
+        
         <div class="modal">
           <div class="modal-content">
             <span class="close">&times;</span>
