--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class="hero-logo"></div>
         <img
           class="hero-img"
-          src="/images/hero.png"
+          src="/images/hero.webp"
           alt="asthetic image of a person swimming in the big ocean"
         />
       </div>
@@ -92,13 +92,26 @@
       <section class="section-flex-container">
         <div class="health-container">
           <h2>mental // physical health</h2>
-          <div class="health-flex"></div>
+          <div class="health-flex">
+            <div class="loader health-loader"></div>
+
+          </div>
         </div>
         <div class="lifestyle-container">
           <h2>lifestyle // habits</h2>
           <div class="lifestyle-flex"></div>
         </div>
-      </section>
+      </section>     
+      
+      <!-- end image  -->
+      <div class="ocean">
+        <img
+          class="ocean-img"
+          src="/images/ocean-small.webp"
+          alt="image of waves in the tropic ocean"
+        />
+      </div>
+
     </main>
     <footer class="blog-footer">
       <div class="footer-row-1">
@@ -106,6 +119,8 @@
           <img src="../icons/logo_small.svg" alt="Health Hub Logo" />
         </div>
       </div>
+
+
 
       <div class="footer-row-2">
         <div class="footer-info">
