--- a/index.html
+++ b/index.html
@@ -94,12 +94,17 @@
           <h2>mental // physical health</h2>
           <div class="health-flex">
             <div class="loader health-loader"></div>
+          </div>            
+          <button>> Health posts</button>
 
-          </div>
         </div>
+
         <div class="lifestyle-container">
           <h2>lifestyle // habits</h2>
-          <div class="lifestyle-flex"></div>
+          <div class="lifestyle-flex">
+            <div class="loader health-loader"></div>
+          </div>
+          <button>> Lifestyle posts</button>
         </div>
       </section>     
       
