changed header and footer color

--- a/blogsite.html
+++ b/blogsite.html
@@ -84,7 +84,7 @@
           <li><a href="#">About</a></li>
           <li><a href="#">Contact</a></li>
         </div>
-        <h5>HealthHub &copy; 2023. All rights reserved.</h5>
+        <h5>Karen Jo &copy; 2023</h5>
       </div>
     </footer>
   </body>
