--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
           <li><a href="#">Blog</a></li>
           <li><a href="#">About</a></li>
           <li><a href="#">Contact</a></li>        
-          <h5>HealthHub &copy; 2023</h5>
+          <h5>Karen Jo &copy; 2023</h5>
         </div>
       </div>
     </footer>
