--- a/specific-blog.html
+++ b/specific-blog.html
@@ -61,7 +61,7 @@
             </div>
         </div>  
         </div>
-        
+
         <div class="modal">
           <div class="modal-content">
             <span class="close">&times;</span>
@@ -95,7 +95,7 @@
           <li><a href="#">About</a></li>
           <li><a href="#">Contact</a></li>
         </div>
-        <h5>HealthHub &copy; 2023. All rights reserved.</h5>
+        <h5>Karen Jo &copy; 2023</h5>
       </div>
     </footer>
   </body>
