--- a/index.html
+++ b/index.html
@@ -91,14 +91,14 @@
       <!-- section content flex containers -->
       <section class="section-flex-container">
         <div class="health-container">
-          <h2>mental // physical health</h2>
+          <img class="content-title" src="../icons/title_health.svg">
           <div class="health-flex">
             <div class="loader health-loader"></div>
           </div>            
         </div>
 
         <div class="lifestyle-container">
-          <h2>lifestyle // habits</h2>
+          <img class="content-title" src="../icons/title_lifestyle.svg">
           <div class="lifestyle-flex">
             <div class="loader health-loader"></div>
           </div>
