img titles small and big added

--- a/index.html
+++ b/index.html
@@ -91,14 +91,16 @@
       <!-- section content flex containers -->
       <section class="section-flex-container">
         <div class="health-container">
-          <img class="content-title" src="../icons/title_health.svg">
+          <img class="content-title" src="../icons/title_health.svg" alt="big title of mental and physical health">
+          <img class="small-content-title" src="../icons/small-health-title.svg" alt="small title of mental and physical health">
           <div class="health-flex">
             <div class="loader health-loader"></div>
           </div>            
         </div>
 
         <div class="lifestyle-container">
-          <img class="content-title" src="../icons/title_lifestyle.svg">
+          <img class="content-title" src="../icons/title_lifestyle.svg" alt=" big title of lifestyle and habits">
+          <img class="small-content-title" src="../icons/small-lifestyle-title.svg" alt="small title of lifestyle and habits">
           <div class="lifestyle-flex">
             <div class="loader health-loader"></div>
           </div>
