--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
         <div class="lifestyle-container">
           <img class="content-title" src="../icons/title_lifestyle.svg" alt=" big title of lifestyle and habits">
-          <img class="small-content-title" src="../icons/small-lifestyle-title.svg" alt="small title of lifestyle and habits">
+          <img class="small-content-title-two" src="../icons/small-lifestyle-title.svg" alt="small title of lifestyle and habits">
           <div class="lifestyle-flex">
             <div class="loader health-loader"></div>
           </div>
@@ -138,10 +138,10 @@
       <div class="footer-row-3">
         <div class="footer-links">
           <h3>Explore</h3>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Blog</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Contact</a></li>        
+          <li><a href="index.html">Home</a></li>
+          <li><a href="blogsite.html">Blog</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="contact.html">Contact</a></li>        
           <h5>Karen Jo &copy; 2023</h5>
         </div>
       </div>
