--- a/blogsite.html
+++ b/blogsite.html
@@ -79,10 +79,10 @@
       <div class="footer-row-3">
         <div class="footer-links">
           <h3>Explore</h3>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Blog</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="blogsite.html">Blog</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="contact.html">Contact</a></li>      
         </div>
         <h5>Karen Jo &copy; 2023</h5>
       </div>
