added about content on index

--- a/index.html
+++ b/index.html
@@ -54,11 +54,36 @@
           src="/images/hero.webp"
           alt="asthetic image of a person swimming in the big ocean"
         />
+        
+      </div>
+      <div class="about-hh">
+        <section class="about-hh-content">
+          <h1>Welcome to the Health Hub</h1>
+          <p>
+            The concept of the Health Hub revolves around creating a community
+            of individuals who are seeking inspiration and motivation to improve
+            their overall well-being.
+          </p>
+
+          <p>
+            Our blog page is designed to be your go-to source for inspiration
+            and information on various aspects of a healthy lifestyle.
+          </p>
+
+          <p>
+            We understand that maintaining a healthy mindset, incorporating
+            regular workouts, and making positive changes to your habits can be
+            challenging. That's why we've created this platform to provide you
+            with the latest news, fact-based articles, and practical tips to
+            support your journey towards a healthier and happier life.
+          </p>
+        </section>
+
       </div>
       <!-- latest posts content container-->
       <section class="latest-container">
         <div class="section-header">
-          <h2>Latest posts</h2>
+          <h2>LATEST POSTS</h2>
         </div>
         <div class="slider-container">
           <div class="slides">
